# grid_guru

./: .gitignore  devenv.nix
.github/workflows/: test.yaml
client/: Cargo.toml
client/src/: lib.rs  main.rs  window.rs
contract/: Scarb.toml
contract/src/models/: game.cairo  player.cairo
contract/src/systems/: actions.cairo
contract/src/tests/: setup.cairo
contracts/: Scarb.toml  dojo_dev.toml  dojo_release.toml  dojo_sepolia.toml  manifest_dev.json  manifest_sepolia.json  torii_dev.toml
contracts/src/: lib.cairo  store.cairo
contracts/src/components/: playable.cairo
contracts/src/elements/tasks/: movement.cairo
contracts/src/models/: game.cairo  index.cairo  player.cairo  tile.cairo
contracts/src/systems/: actions.cairo
contracts/src/tests/: setup.cairo  test_actions.cairo
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
frontend/src/plugins/: audio.rs  mod.rs  starknet_call.rs  tokio.rs  torii.rs
frontend/src/plugins/dojo_models/: mod.rs
frontend/src/plugins/networking/: config.rs  controller.rs  mod.rs  starknet_call.rs  torii.rs
frontend/src/plugins/render/: assets.rs  camera.rs  constants.rs  highlight.rs  mod.rs  mouse.rs  player.rs  tile.rs
frontend/src/plugins/screens/: loading.rs  menu.rs  mod.rs
frontend/src/plugins/torii/: mod.rs  new_torii.rs
