[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
account_sdk = { git = "https://github.com/cartridge-gg/controller", package = "account_sdk" }
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29.1"
dojo-types = { version = "1.1.2", git = "https://github.com/dojoengine/dojo.git" }
starknet = "0.13.0"
tokio = { version = "1.43.0", features = ["full"] }
torii-client = { version = "1.1.2", git = "https://github.com/dojoengine/dojo.git" }
torii-grpc = { version = "1.1.2", git = "https://github.com/dojoengine/dojo.git" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
